force-app/main/default/objects/Question_Section__c/Question_Section__c.object-meta.xml
<CustomObject>
    <label>Question Section</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>