force-app/main/default/objects/Question_Section__c/fields/QS_Number__c.field-meta.xml
<CustomField>
    <fullName>QS_Number__c</fullName>
    <displayFormat>QS-{000}</displayFormat>
    <label>QS Number</label>
    <type>AutoNumber</type>
</CustomField>