force-app/main/default/objects/Question_Section__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <label>Question Category</label>
    <referenceTo>Question_Category__c</referenceTo>
    <relationshipLabel>Question Sections</relationshipLabel>
    <relationshipName>Question_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>