force-app/main/default/objects/Question_Section__c/fields/Question_Group__c.field-meta.xml
<CustomField>
    <fullName>Question_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, will display as part of a question group using the Section_Library__r.Section_Name__c field as the question group text.</description>
    <inlineHelpText>If ticked, will display as part of a question group using the Section_Library__r.Section_Name__c field as the question group text.</inlineHelpText>
    <label>Question Group</label>
    <type>Checkbox</type>
</CustomField>