force-app/main/default/objects/Question_Section__c/fields/Question_Library__c.field-meta.xml
<CustomField>
    <fullName>Question_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Library</label>
    <referenceTo>Question_Library__c</referenceTo>
    <relationshipName>Questionnaires_Section</relationshipName>
    <type>Lookup</type>
</CustomField>