force-app/main/default/objects/Question_Section__c/fields/Section_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Section_Indicator__c</fullName>
    <formula>If(ISBLANK(Section_Library__r.Id),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Indicator</label>
    <type>Checkbox</type>
</CustomField>