force-app/main/default/objects/Question_Section__c/fields/Section_Library__c.field-meta.xml
<CustomField>
    <fullName>Section_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Library</label>
    <referenceTo>Section_Library__c</referenceTo>
    <relationshipName>Questionnaires_Section</relationshipName>
    <type>Lookup</type>
</CustomField>