force-app/main/default/objects/Question_Section__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <formula>TEXT(Section_Library__r.Sub_Section__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Type</label>
    <type>Text</type>
</CustomField>