force-app/main/default/objects/Question_Section__c/fields/Source_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Name__c</fullName>
    <description>This field will capture the name of the File which the record is from.</description>
    <label>Source File Name(CEI)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>