force-app/main/default/objects/Question_Section__c/fields/Validation_Warning_Setting__c.field-meta.xml
<CustomField>
    <fullName>Validation_Warning_Setting__c</fullName>
    <description>API name of the Quality Indicator Setting custom metadata record used to configure the validation warning for this question</description>
    <inlineHelpText>API name of the Quality Indicator Setting custom metadata record used to configure the validation warning for this question</inlineHelpText>
    <label>Validation Warning Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_PI</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_PR</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_UPWL_Sig</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_UPWL_Con</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_FMI</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_MM_Poly</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_MM_Anti</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_ADL</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_IAD</fullName>
            </value>
            <value>
                <fullName>QID_Warning_Recipients_Assessed_HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>