force-app/main/default/objects/Question_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Category__c</columns>
    <columns>Type__c</columns>
    <columns>Section_Type__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Section_Library__c</columns>
    <columns>Question_Library__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Key__c</columns>
    <columns>Source_File_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>