force-app/main/default/objects/Question_Section__c/listViews/Consumer_Experience_Interview.listView-meta.xml
<ListView>
    <fullName>Consumer_Experience_Interview</fullName>
    <columns>NAME</columns>
    <columns>Key__c</columns>
    <columns>Question_Category__c</columns>
    <columns>Question_Library__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Section_Library__c</columns>
    <columns>Section_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Question_Category__c</field>
        <operation>equals</operation>
        <value>Consumer Experience Interview</value>
    </filters>
    <label>Consumer Experience Interview</label>
</ListView>